try to fix the martial artists picture not showing on live

--- a/_posts/2024-10-06-post.md
+++ b/_posts/2024-10-06-post.md
@@ -11,8 +11,7 @@ Hey guys, here's a first post about the progress of our upcoming rat themed Acti
 
 Our story will take place in an underground world full of mutated rats.
 
-The underground world is divided between 7 domains and the wasteland between each domains. Each domain is ruled by a "Sewer Lord".
-
+The underground world is divided between 7 domains and the wasteland between each domains. Each domain is ruled by a "Sewer Lord" who are the main storyline "bosses" some are friendly others less so.
 ## Art
 
 Here's the art style we've settled on (Stylized fantasy GenAI art for now but handdrawn are a WIP) : 
