add page : cult of the forgotten one

--- a/_posts/2024-10-07-cheese.md
+++ b/_posts/2024-10-07-cheese.md
@@ -5,10 +5,10 @@ date:   2024-10-07 12:02:42 +0200
 categories: posts
 ---
 
-Here’s an elaboration on the concept of the **cheese factory** and its four types of cheese monsters that have come to life due to an experiment of the **7th Sewer Lord** who hid a chaos shard in a pile of cheese.
+The **cheese factory**, 1st dungeon the player will face and its four types of cheese monsters that have come to life due to an experiment of the **7th Sewer Lord** who hid a chaos shard in a pile of cheese.
 
 ### **The Cheese Factory: Overview**
-The cheese factory, once a bustling place for creating a variety of cheeses, has been transformed into a bizarre, living entity due to the chaotic energy of the 7th Sewer Lord. The factory itself appears alive, with machinery humming and creaking, and a sickly-sweet scent wafting through the air. Carts of gooey cheese slide along conveyor belts, and vats bubble ominously with strange, glowing mixtures. The walls are covered in mold, and shadows dance as the cheese monsters roam freely, protecting the secrets of the factory.
+The cheese factory, once a bustling place for creating a variety of cheeses all rats love, has been transformed into a bizarre, living entity due to the chaotic energy of the 7th Sewer Lord. The factory itself appears alive, with machinery humming and creaking, and a sickly-sweet scent wafting through the air. Carts of gooey cheese slide along conveyor belts, and vats bubble ominously with strange, glowing mixtures. The walls are covered in mold, and shadows dance as the cheese monsters roam freely, protecting the secrets of the factory.
 
 ### **Types of Cheese Monsters**
 
@@ -41,7 +41,7 @@ The cheese factory, once a bustling place for creating a variety of cheeses, has
 
 ![alt text](/assets/images/DALL-E-Garganzola.webp)
 
-- **Description**: Garganzola is the first boss of the game resembling a cheese colosus, standing at least 5 times the height of the player. Its body is bloated and dripping with molten cheese, with limbs that appear to be in constant motion, resembling writhing tentacles made of thick cheese.
+- **Description**: Garganzola is the first boss of the game resembling a cheese colossus, standing at least 5 times the height of the player. Its body is bloated and dripping with molten cheese, with limbs that appear to be in constant motion, resembling writhing tentacles made of thick cheese.
 - **Abilities**: It can unleash waves of molten cheese from its body, creating hazardous areas and summoning smaller cheese creatures to assist it in battle. The Behemoth can also create shockwaves that knock players back and can regenerate by absorbing cheese from the factory.
 - **Behavior**: This creature is the ultimate guardian of the cheese factory, lumbering through the environment with a lumbering gait. It roars with a guttural voice, echoing through the factory as it charges at the player, determined to protect the chaos shard at all costs.
 
