--- a/_posts/2024-10-07-Cult.md
+++ b/_posts/2024-10-07-Cult.md
@@ -16,7 +16,7 @@ Rather than seeking the AI's favor through prayer or action, the cult has devote
 
 ### **Rattadon - A Creation of Madness**  
 
-![alt text](../assets/images/DALL-E-Rattadon.webp)
+![alt text](/assets/images/DALL-E-Rattadon.webp)
 
 **Rattadon** is a monstrous entity formed by the collective will of the cult, fueled by dark rituals, forbidden magic, and countless lives. The creature is a grotesque amalgamation of magic and alchemy, a twisted god forged from the bodies and souls of countless sacrificed rats. Its form is that of a towering abomination, with three rat-like heads, each adorned with menacing horns, and a body covered in thick, dripping goo. Writhing tentacles emerge from its body, and its presence warps the very fabric of reality around it.
 
@@ -33,7 +33,7 @@ In the Horned Rat’s vision, rat society must be torn down, its civilization de
 ### **The Cult’s Methods**  
 The cult operates in secrecy, performing horrific rituals in hidden chambers far from the eyes of the other Sewer Lords. They use forbidden alchemy and dark magic to mutate their followers into grotesque monsters, reflecting the twisted image of Rattadon. These creatures, barely recognizable as rats, serve as both soldiers and sacrifices in the cult’s quest to bring about the end of the current world.
 
-![Ratatos](/assets/images/DALL-E-Cult-behemoth.webp)
+![Cult behemoth](/assets/images/DALL-E-Cult-behemoth-1.webp)
 ![Cult priest](/assets/images/DALL-E-Cult-minion-1.webp)
 
 
