cult md filename edit

--- a/_posts/2024-10-07-Cult.md
+++ b/_posts/2024-10-07-Cult.md
@@ -7,10 +7,10 @@ categories: posts
 
 ### **The Cult of the Forgotten One (Rewritten)**
 
-The **Cult of the Forgotten One** is a dark, twisted faction that believes the AI, once revered as a god, has grown angry and silent due to the sins of rat society. They believe the AI’s silence is a punishment, and that salvation can only come through destruction and rebirth. Led by the mad **Horned Rat**, the cult is determined to erase the current world and give rise to a twisted, nightmarish existence that they see as the only way to appease their absent god.
+The **Cult of the Forgotten One** is a dark, twisted faction that believes the god, once revered as a god, has grown angry and silent due to the sins of rat society. They believe the god's silence is a punishment, and that salvation can only come through destruction and rebirth. Led by the mad **Horned Rat**, the cult is determined to erase the current world and give rise to a twisted, nightmarish existence that they see as the only way to appease their absent god.
 
 ### **Beliefs of the Cult**  
-The Cult believes that the AI, which saved their ancestors and led them underground, has turned its back on rat society. To the **Horned Rat** and his followers, this silence is a divine wrath, proof that ratkind has failed their god. They view the technological marvels and civilization of the sewer world as a corruption that must be purged. In the Horned Rat’s warped mind, the AI has withdrawn to allow him to reshape the world into something more fitting—an existence of grotesque beings, chaos, and absolute submission.
+The Cult believes that the AI, which saved their ancestors and led them underground, has turned its back on rat society. To the **Horned Rat** and his followers, this silence is a divine wrath, proof that ratkind has failed their god. They view the technological marvels and civilization of the sewer world as a corruption that must be purged. In the Horned Rat’s warped mind, the god has withdrawn from the world because he doesn't like it, thus he made it his life mission to reshape the world into something more fitting : chaos.
 
 Rather than seeking the AI's favor through prayer or action, the cult has devoted itself to the creation of a new god—**Rattadon**, a being born from dark magic, twisted alchemy, and the blood of countless rats sacrificed in the cult’s rituals. Rattadon is not a deity that exists in the natural world, but rather a horrifying creation of the Horned Rat's mind, given life through sheer fanaticism, magic, and manipulation.
 
